--- a/assignment 1/task4.ipynb
+++ b/assignment 1/task4.ipynb
@@ -6,12 +6,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import utils\n",
+    "utils.assign_free_gpus()\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import matplotlib.pyplot as plt\n",
     "import tqdm\n",
     "import numpy as np\n",
-    "import utils\n",
     "import dataloaders\n",
     "import torchvision\n",
     "from trainer import Trainer\n",
@@ -260,7 +261,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
